// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx binding > basic: <div id={id} /> > expected 1`] = `
"import { renderEffect as _renderEffect, setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setDynamicProp(n0, "id", _ctx.id))
  return n0
}"
`;

exports[`jsx binding > basic: <div id={id} /> > jsx 1`] = `
"import { renderEffect as _renderEffect, setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setDynamicProp(n0, "id", _ctx.id))
  return n0
}"
`;

exports[`jsx binding > basic: <div id={id} /> > received 1`] = `
"import { renderEffect as _renderEffect, setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setDynamicProp(n0, "id", _ctx.id))
  return n0
}"
`;

exports[`jsx binding > basic: <div id={id} /> > vapor 1`] = `
"import { renderEffect as _renderEffect, setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setDynamicProp(n0, "id", _ctx.id))
  return n0
}"
`;

exports[`jsx binding > camel case: <div camel-case={value1} /> > jsx 1`] = `
"import { renderEffect as _renderEffect, setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setDynamicProp(n0, "camel-case", _ctx.value1))
  return n0
}"
`;

exports[`jsx binding > camel case: <div camel-case={value1} /> > vapor 1`] = `
"import { renderEffect as _renderEffect, setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setDynamicProp(n0, "camel-case", _ctx.value1))
  return n0
}"
`;
